--- a/02_RFE_feature extraction-checkpoint.ipynb
+++ b/02_RFE_feature extraction-checkpoint.ipynb
@@ -137,12 +137,12 @@
    ],
    "source": [
     "\n",
-    "n_features = x.shape[1]  # 指定特征数量\n",
+    "n_features = x.shape[1]  ",
     "rfe = RFE(knn, n_features_to_select=n_features)\n",
-    "with trange(n_features) as t:  # 创建进度条\n",
+    "with trange(n_features) as t:  ",
     "    for i in t:\n",
-    "        rfe.fit(x, y)  # 训练模型\n",
-    "        t.set_description(f\"Training RFE ({i+1}/{n_features})\")  # 显示进度和其他信息\n"
+    "        rfe.fit(x, y)  ",
+    "        t.set_description(f\"Training RFE ({i+1}/{n_features})\")  "
    ]
   },
   {
