--- a/09_GAN_data amplification-checkpoint.ipynb
+++ b/09_GAN_data amplification-checkpoint.ipynb
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "latent_dim=33\n",
-    "# Cifar10图片尺寸\n",
+    "",
     "height,width=(33,33)\n",
     "channels=1"
    ]
@@ -218,15 +218,15 @@
     }
    ],
    "source": [
-    "# 生成网络：将隐空间中矢量生成图片，使用Conv2DTranspose\n",
+    "",
     "generator_input=Input((latent_dim,))\n",
     "x=Dense(128*16*16)(generator_input)\n",
-    "# 只添加了一个alpha参数，其他地方跟书上一致，alpha默认0.3\n",
+    "",
     "x=LeakyReLU(alpha=0.1)(x)\n",
     "x=Reshape((16,16,128))(x)\n",
     "x=Conv2D(256,3,padding='same')(x)\n",
     "x=LeakyReLU(alpha=0.1)(x)\n",
-    "# 结果为32*32*256，为避免生成图片呈现棋盘的点阵格式，凡是使用strides的地方，窗口大小为strides的整数倍\n",
+    "",
     "x=Conv2DTranspose(256,3,strides=2,padding='valid')(x)\n",
     "x=LeakyReLU(alpha=0.1)(x)\n",
     "\n",
@@ -235,9 +235,9 @@
     "x=Conv2D(256,3,padding='same')(x)\n",
     "x=LeakyReLU(alpha=0.1)(x)\n",
     "\n",
-    "# 结果为32*32*3，即一个图片正确格式。使用tanh代替sigmoid\n",
+    "",
     "x=Conv2D(channels,7,activation='tanh',padding='same')(x)\n",
-    "generator=Model(generator_input,x)#它在包含在GAN里训练的，所以这里不用编译\n",
+    "generator=Model(generator_input,x)",
     "generator.summary()"
    ]
   },
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.utils import plot_model     ##模型结构图\n",
+    "from tensorflow.keras.utils import plot_model     ",
     "plot_model(generator, 'd:\\\\h5\\\\model_3d.png')"
    ]
   },
@@ -277,7 +277,7 @@
     "    else:\n",
     "        bn_name = None\n",
     "        conv_name = None\n",
-    "# inception 模块和 xception模块 bn层位置不一样\n",
+    "n",
     "\n",
     "    #x = BatchNormalization(name=bn_name)(x)\n",
     "    x = Conv2D(nb_filter,kernel_size,padding=padding,strides=strides,data_format='channels_last',activation='relu',\n",
@@ -355,7 +355,7 @@
    "source": [
     "def TestNet(input_shape=None):\n",
     "    inpt = Input(shape=input_shape)\n",
-    "    #padding = 'same'，填充为(步长-1）/2,还可以用ZeroPadding3D((3,3,3))\n",
+    "    ",
     "    x = Conv2d_BN(inpt,32,(3,3),strides=(1,1),padding='same')\n",
     "    x = InceptionB(x,32)\n",
     "    x = MaxPooling2D(pool_size=(2,2),strides=(2,2),padding='same')(x)\n",
@@ -530,7 +530,7 @@
     }
    ],
    "source": [
-    "# 鉴别网络\n",
+    "",
     "discriminator_input=Input((height,width,channels))\n",
     "x=Conv2D(128,3, padding='same')(discriminator_input)\n",
     "x=LeakyReLU(alpha=0.1)(x)\n",
@@ -545,7 +545,7 @@
     "x=LeakyReLU(alpha=0.1)(x)\n",
     "x = MaxPooling2D(pool_size=(2,2),strides=(2,2),padding='same')(x)\n",
     "x=Flatten()(x)\n",
-    "# Dropout和给标签添加噪声，可以避免GAN卡住\n",
+    "",
     "x=Dropout(0.4)(x)\n",
     "x=Dense(1,activation='sigmoid')(x)\n",
     "\n",
@@ -571,7 +571,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.utils import plot_model     ##模型结构图\n",
+    "from tensorflow.keras.utils import plot_model     ",
     "plot_model(discriminator, 'd:\\\\h5\\\\model_3d.png')"
    ]
   },
@@ -581,15 +581,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# clipvalue，梯度超过这个值就截断，decay，衰减，使得训练稳定\n",
+    "",
     "discriminator_optimizer=RMSprop(lr=0.0003,clipvalue=1.0,decay=1e-8)\n",
     "discriminator.compile(optimizer=discriminator_optimizer,loss='binary_crossentropy')\n",
     "\n",
-    "# 最后的生成对抗网络，由生成网络与对抗网络组合而成，此时冻结鉴别网络，训练的只是生成网络\n",
+    "",
     "discriminator.trainable=False\n",
-    "# 组成整个生成对抗网络\n",
+    "",
     "gan_input=Input((latent_dim,))\n",
-    "# 最终网络形式为鉴别网络作用于生成网络，故生成器也不用compile\n",
+    "",
     "gan_output=discriminator(generator(gan_input))\n",
     "gan_optimizer=RMSprop(lr=0.0004,clipvalue=1.0,decay=1e-8)\n",
     "gan=Model(gan_input,gan_output)\n",
@@ -813,9 +813,9 @@
    ],
    "source": [
     "#(x_train,y_train),(x_test,y_test)=cifar10.load_data()\n",
-    "# 选择frog类别，总共10个类\n",
-    "x_train=x_train[y_train.flatten()==1]#选择类别\n",
-    "# reshape到输入格式 nums*height*width*channels，像素归一化\n",
+    "",
+    "x_train=x_train[y_train.flatten()==1]",
+    "",
     "x_train=x_train.reshape((x_train.shape[0],)+(height,width,channels))\n",
     "iters=100\n",
     "batch_size=64\n",
@@ -823,26 +823,26 @@
     "\n",
     "start=0\n",
     "for step in range(iters):\n",
-    "#     选取潜空间中随机矢量（正态分布）\n",
+    "n",
     "    random_latent_vec=np.zeros((batch_size,latent_dim))\n",
-    "#     生成网络产生图片\n",
+    "",
     "    generated_images=generator.predict(random_latent_vec)\n",
     "    stop=start+batch_size\n",
-    "#     真实原始图片\n",
+    "",
     "    real_images=x_train[start:stop]\n",
     "    #print(real_images.shape)\n",
-    "#     mix生成和真实图片\n",
+    "",
     "    combined_images=np.concatenate([generated_images,real_images])\n",
     "#     mix labels\n",
     "    labels=np.concatenate([np.ones((batch_size,1)),np.zeros((batch_size,1))])\n",
-    "#     trick：标签添加随机噪声\n",
+    "",
     "    labels+=0.05*np.random.random(labels.shape)\n",
-    "#     鉴别loss，可能为负，因为使用的是LeakyReLU\n",
+    "",
     "    d_loss=discriminator.train_on_batch(combined_images,labels)\n",
     "    print(d_loss)\n",
-    "#     重新生成随机矢量\n",
+    ",
     "    random_latent_vec=np.zeros((batch_size,latent_dim))\n",
-    "#     故意设置标签为真实\n",
+    "",
     "    misleading_targets=np.zeros((batch_size,1))\n",
     "    a_loss=gan.train_on_batch(random_latent_vec,misleading_targets)\n",
     "    start+=batch_size\n",
@@ -852,10 +852,10 @@
     "#         gan.save_weights('gan.h5')\n",
     "        print('discriminator loss:',d_loss)\n",
     "        print('adversarial loss:',a_loss)\n",
-    "#         保存一个batch里的第一个图片，之前像素归一化了，这里乘以255还原\n",
+    "",
     "        #img=image.array_to_img(generated_images[0]*255.,scale=False)\n",
     "        #img.save(os.path.join('E:/data/tt','generated_frog'+str(step)+'.png'))\n",
-    "#         保存一个对比图片\n",
+    "",
     "        #img=image.array_to_img(real_images[0]*255.,scale=False)\n",
     "        #img.save(os.path.join('E:/data/tt','real_frog'+str(step)+'.png'))"
    ]
@@ -14185,7 +14185,7 @@
     "    print(i)\n",
     "    from sklearn.model_selection import train_test_split\n",
     "    x_train,x_test,y_train,y_test=train_test_split(img_n,lab,test_size=0.1,random_state=1)\n",
-    "    x_train=x_train[y_train.flatten()==1]#选择类别\n",
+    "    x_train=x_train[y_train.flatten()==1]",
     "    x_train=x_train.reshape((x_train.shape[0],)+(height,width,channels))\n",
     "    iters=10\n",
     "    batch_size=64\n",
