--- a/05_r1_Cancer classification model based on transcriptomic feature maps.ipynb
+++ b/05_r1_Cancer classification model based on transcriptomic feature maps.ipynb
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.utils import plot_model     ##模型结构图\n",
+    "from tensorflow.keras.utils import plot_model     ",
     "plot_model(model, 'd:\\\\h5\\\\model_3d.png')"
    ]
   },
