Update 05_r4_Cancer classification model based on transcriptomic feature maps.ipynb

--- a/05_r4_Cancer classification model based on transcriptomic feature maps.ipynb
+++ b/05_r4_Cancer classification model based on transcriptomic feature maps.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "callbacks_list = [\n",
     "    keras.callbacks.ReduceLROnPlateau(monitor='val_loss',factor=0.5,patience=10),\n",
-    "    keras.callbacks.ModelCheckpoint(filepath='e:/data/rmap.h5',monitor='val_loss',save_best_only=True)   ##保存最佳模型\n",
+    "    keras.callbacks.ModelCheckpoint(filepath='e:/data/rmap.h5',monitor='val_loss',save_best_only=True)   ",
     "    ]"
    ]
   },
@@ -196,7 +196,7 @@
     "    else:\n",
     "        bn_name = None\n",
     "        conv_name = None\n",
-    "# inception 模块和 xception模块 bn层位置不一样\n",
+    "",
     "\n",
     "    #x = BatchNormalization(name=bn_name)(x)\n",
     "    x = Conv2D(nb_filter,kernel_size,padding=padding,strides=strides,data_format='channels_last',activation='relu',\n",
@@ -270,7 +270,7 @@
    "source": [
     "def TestNet(input_shape=None):\n",
     "    inpt = Input(shape=input_shape)\n",
-    "    #padding = 'same'，填充为(步长-1）/2,还可以用ZeroPadding3D((3,3,3))\n",
+    "   ",
     "    x = Conv2d_BN(inpt,32,(1,1),strides=(1,1),padding='same')\n",
     "    x = Conv2d_BN(x,32,(1,1),strides=(1,1),padding='same')\n",
     "    x = InceptionB(x,64)\n",
@@ -525,7 +525,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.utils import plot_model     ##模型结构图\n",
+    "from tensorflow.keras.utils import plot_model    ",
     "plot_model(model, 'd:\\\\h5\\\\model_3d.png')"
    ]
   },
