Update 07_Survival prediction based on transcriptomic feature maps_BLCA.ipynb

--- a/07_Survival prediction based on transcriptomic feature maps_BLCA.ipynb
+++ b/07_Survival prediction based on transcriptomic feature maps_BLCA.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "def TestNet(input_shape=None):\n",
     "    inpt = Input(shape=input_shape)\n",
-    "    #padding = 'same'，填充为(步长-1）/2,还可以用ZeroPadding3D((3,3,3))\n",
+    "    ",
     "    x = Conv2d_BN(inpt, 64, (5, 5))\n",
     "    x = Conv2d_BN(x, 64, (5, 5))\n",
     "    x = MaxPooling2D(pool_size=(2,2),strides=(2,2),padding='same')(x)\n",
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.utils import plot_model     ##模型结构图\n",
+    "from tensorflow.keras.utils import plot_model    ",
     "plot_model(model, 'd:\\\\h5\\\\model_3d.png')"
    ]
   },
